test/spec_vectors/simd_splat/fail/module_11.wat
(module (func (result v128) f32x4.splat (i32.const 4)))